# twitcher

./: .dockerignore  .gitignore  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGES.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  buildout.cfg  custom.cfg.example  development.ini  environment-docs.yml  environment.yml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  spec-file.txt
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/workflows/: tests.yml
docs/: Makefile
docs/diagrams/: twitcher-new.xml  twitcher-overview.xml
docs/source/: api.rst  conf.py  configuration.rst  dev_guide.rst  index.rst  installation.rst  overview.rst  running.rst  tutorial.rst
etc/: nginx.conf
notebooks/: README.md  environment.yml  twitcher-client.ipynb  twitcher-demo.ipynb  twitcher-keycloak-demo.ipynb  twitcher-keycloak-online-demo.ipynb  twitcher-xmlrpcclient.ipynb
templates/: twitcher.ini
tests/: common.py  test_adapter.py  test_api.py  test_datatype.py  test_esgf.py  test_frontpage.py  test_namesgenerator.py  test_owsproxy.py  test_owsregistry.py  test_owsrequest_wms.py  test_owsrequest_wps.py  test_owssecurity.py  test_store.py  test_tokengenerator.py  test_utils.py
tests/functional/: base.py  common.py  test_adapter.py  test_api.py  test_oauth2_app.py  test_owsproxy_app.py  test_rpcinterface_app.py  test_wps_app.py
twitcher/: __init__.py  __version__.py  api.py  basicauth.py  client.py  datatype.py  db.py  esgf.py  exceptions.py  frontpage.py  interface.py  namesgenerator.py  oauth2.py  owsexceptions.py  owsproxy.py  owsregistry.py  owsrequest.py  owssecurity.py  rpcinterface.py  store.py  tokengenerator.py  tweens.py  twitcherctl.py  typedefs.py  utils.py  wps.py
(+19 files in other folders)
