[bumpversion]
current_version = 0.4.0
commit = True
tag = True

[bumpversion:file:CHANGES.rst]
search =
	Unreleased
	==========
replace =
	Unreleased
	==========

	{new_version} ({now:%%Y-%%m-%%d})
	==================
[bumpversion:file:twitcher/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'

[metadata]
description-file = README.rst

[tool:pytest]
addopts =
	--strict
	--tb=native
	# tests/
python_files = test_*.py
markers =
	online: mark test to need internet connection
	slow: mark test to be slow

[flake8]
ignore = F401,E402
max-line-length = 120
exclude =
	.git,
	__pycache__,
	twitcher/alembic/versions,
	docs/source/conf.py,
	build,
	dist,
	src,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120
